fixed some styling and added dark mode button

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -19,8 +19,8 @@
 .game-root {
     position: absolute;
     margin-top: 2em;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 90%;
     left: 0;
     top: 0;
     display: flex;
@@ -31,8 +31,8 @@
 .game-board {
     margin-top: 20vh;
     padding: 3em;
-    width: 500px;
-    height: 500px;
+    width: 440px;
+    height: 370px;
     border-radius: 14px;
     background-color: bisque;
     justify-content: center;
@@ -108,3 +108,19 @@ outline: none;
 background: #ddd;
 }
 
+
+.footer-root {
+
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #eee;
+  color: white;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: black;
+  padding: 5px 0;
+}
